--- a/css/dark.css
+++ b/css/dark.css
@@ -21,17 +21,24 @@ ul {
   width: 100%;
   position: fixed;
   top: 0px;
+  display: flex;
+  align-items: center;
 }
 
 #title {
-  text-align: center;
-  margin: 0px;
-  padding: 5px;
+  padding: 2px 6px;
   text-shadow: 2px 2px 2px black;
+  background-color: #2A4151;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.rborder {
+  border: 1px solid black;
+  border-radius: 2px;
 }
 
 #menuButton {
-  position: absolute;
   font-size: 20px;
   text-align: center;
   background-color: #33373A;
@@ -175,12 +182,11 @@ ul {
 #edit {
   background-color: #33373A;
   border: 1px solid black;
-  /*width: 300px;*/
   padding: 5px;
-  z-index: 1;
-  position: fixed;
+  position: absolute;
   top: 20%;
-  left: calc(50% - 150px);
+  left: 50%;
+  transform: translate(-50%, -20%);
 }
 
 #edit table {
@@ -207,6 +213,26 @@ ul {
   padding-left: 4px;
 }
 
+#edit > div {
+  text-align: center;
+  background-color: #24282A;
+  border: 1px solid black;
+  border-radius: 2px;
+  margin-top: 5px;
+}
+
+#edit button {
+  background-color: #2A4151;
+  border: 1px solid black;
+  border-radius: 2px;
+  margin: 3px 5px;
+  width: 80px;
+  color: #CBD0D0;
+  padding: 3px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
 select, input {
   background-color: #33373A;
   color: #CBD0D0;
@@ -228,26 +254,6 @@ input {
   height: 22px;
   width: 200px;
   padding-left: 4px;
-}
-
-#edit > div {
-  text-align: center;
-  background-color: #24282A;
-  border: 1px solid black;
-  border-radius: 2px;
-  margin-top: 5px;
-}
-
-#edit button {
-  background-color: #2A4151;
-  border: 1px solid black;
-  border-radius: 2px;
-  margin: 3px 5px;
-  width: 80px;
-  color: #CBD0D0;
-  padding: 3px;
-  font-size: 18px;
-  font-weight: bold;
 }
 
 .bubbleTd {
