--- a/css/dark.css
+++ b/css/dark.css
@@ -1,8 +1,14 @@
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #33373A;
   font-family: sans-serif;
   color: #CBD0D0;
-  margin: 0px;
 }
 
 a {
@@ -18,9 +24,6 @@ ul {
   background-color: #24282A;
   border: 1px solid black;
   height: 36px;
-  width: 100%;
-  position: fixed;
-  top: 0px;
   display: flex;
   align-items: center;
 }
@@ -31,6 +34,11 @@ ul {
   background-color: #2A4151;
   font-size: 22px;
   font-weight: bold;
+}
+
+#mainContent {
+  height: calc(100% - 36px);
+  overflow: auto;
 }
 
 .rborder {
@@ -137,10 +145,6 @@ ul {
   background: #f6f6f6;
 }
 /* End Application map*/
-
-#mainContent {
-  margin-top: 39px;
-}
 
 .emojiIcon {
   font-size: 90px;
