--- a/css/dark.css
+++ b/css/dark.css
@@ -224,6 +224,7 @@ ul {
   border-radius: 2px;
   margin-top: 5px;
   display: flex;
+  justify-content: center;
 }
 
 #edit button {
@@ -308,10 +309,12 @@ input {
   height: 18px;
   border: 1px solid black;
   border-radius: 2px;
-  text-align: center;
   font-size: 14px;
   cursor: pointer;
   margin-left: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .xSelect ul {
