--- a/css/dark.css
+++ b/css/dark.css
@@ -22,7 +22,7 @@ ul {
   list-style-type: none;
 }
 
-#heather {
+#header {
   background-color: #24282A;
   border: 1px solid black;
   height: 36px;
@@ -43,7 +43,7 @@ ul {
   margin: 2px;
 }
 
-#toolBar div {
+#toolBar .toolBarIcon {
   border: 1px solid black;
   border-radius: 2px;
   width: 24px;
@@ -53,6 +53,7 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: 2px;
 }
 
 #version {
@@ -65,6 +66,28 @@ ul {
 #mainContent {
   overflow: auto;
   flex: 1;
+}
+
+#footer {
+  overflow: auto;
+  display: none;
+  flex-shrink: 0;
+  height: 85px;
+  border: 1px solid black;
+  background-color: #24282A;
+}
+
+#cursor {
+  width: 40px;
+  height: 20px;
+  position: absolute;
+  left: 0;
+}
+
+#cursor polygon {
+  fill: rgba(0, 0, 0, 0.5);
+  stroke: white;
+  stroke-width: 1;
 }
 
 .rborder {
@@ -89,8 +112,8 @@ ul {
   background-color: #24282A;
   top: 39px;
   left: 3px;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   border: 1px solid black;
 }
 
@@ -102,7 +125,7 @@ ul {
 }
 
 #menu li:last-child {
-  border-bottom: 0px;
+  border-bottom: 0;
 }
 
 .liDivider {
@@ -127,12 +150,12 @@ ul {
 #appMap table {
   width: 100%;
   border: 1px solid black;
-  border-spacing: 0px;
+  border-spacing: 0;
   margin-bottom: 4px;
 }
 
 #appMap table td {
-  padding: 0px;
+  padding: 0;
 }
 
 #appMap table td:last-child {
@@ -143,7 +166,7 @@ ul {
   background-color: rgba(0, 0, 0, 0.6);
   color: white;
   text-shadow: 2px 2px 2px black;
-  margin: 0px;
+  margin: 0;
   padding: 2px;
   border-bottom: 1px solid black;
 }
@@ -229,6 +252,7 @@ ul {
 }
 
 #edit {
+  display: none;
   background-color: #33373A;
   border: 1px solid black;
   padding: 5px;
@@ -310,17 +334,16 @@ input {
 .bubbleTd {
   background-clip: padding-box;
   border-radius: 5px;
-  background-color: #00000033;
+  background-color: rgba(0, 0, 0, 0.5);
   border: 1px solid black;
   color: #ffffff;
   font-size: 16px;
   text-align: center;
-  padding: 0px 3px 0px 3px;
+  padding: 0 3px 0 3px;
 }
 
 .xSelect {
   font-size: 14px;
-  width: 204px;
 }
 
 .xSelect > div {
@@ -330,7 +353,7 @@ input {
   border-radius: 2px;
   height: 24px;
   background-color: #33373A;
-  padding: 0px 2px;
+  padding: 0 2px;
 }
 
 .xSelect .selectedOptions {
@@ -344,7 +367,7 @@ input {
 /*background-color: #2A4151;
   border: 1px solid black;
   border-radius: 2px;*/
-  padding: 0px 2px;
+  padding: 0 2px;
   margin-right: 3px;
 }
 
@@ -364,10 +387,10 @@ input {
 
 .xSelect ul {
   list-style-type: none;
-  padding: 0px;
-  margin: 1px 0px 0px 0px;
+  padding: 0;
+  margin: 1px 0 0 0;
   position: absolute;
-  width: 202px;
+  z-index: 20;
   visibility: hidden;
   border: 1px solid black;
   border-radius: 2px;
@@ -377,7 +400,7 @@ input {
 }
 
 .xSelect li {
-  padding: 2px;
+  padding: 2px 5px;
   cursor: pointer;
 }
 
@@ -389,16 +412,134 @@ input {
   background-color: #007ACC;
 }
 
-#__rep_CostsReport > div {
+/*** SVG Reports ***/
+#report svg text {
+  font-size: 14px;
+  fill: white;
+  text-shadow: 3px 3px 8px black;
+  dominant-baseline: central;
+  text-anchor: middle;
+}
+
+#report .dataColumn {
+  overflow: auto;
+}
+
+#report .infoColumn rect {
+  fill: #24282A;
+  stroke: black;
+}
+
+#report .infoColumn text.yearName {
+  fill: #ffac00;
+}
+
+#report .infoColumn text.partSum {
+  font-size: 12px;
+  fill: #70dc35;
+}
+
+.repFooterInfo {
+  color: white;
+  font-size: 14px;
+  text-shadow: 3px 3px 8px black;
+  flex: 1;
+}
+
+.greyBox {
+  background-color: #24282a;
+  border: 1px solid black;
+  margin: 1px;
+  padding: 0 2px;
+}
+
+.spanRow {
+  overflow: auto;
+}
+
+.spanRow span {
+  padding: 0 2px;
+}
+
+.eurText {
+  color: #70dc35;
+}
+
+/* #__rep_Costs */
+#__rep_Costs #__rep_costsTypes {
+  display: flex;
+  position: sticky;
+  top: 0;
+}
+
+#__rep_Costs_data {
   display: flex;
 }
 
-#__rep_CostsReport .xSelect {
-  width: auto;
-  flex-grow: 1;
+#__rep_Costs_info > ul {
+  margin: 0;
+  padding: 0;
 }
 
-#__rep_CostsReport select {
-  width: 90px;
-  margin: 0px 2px;
+#__rep_Costs_info > ul > li {
+  border-bottom: 1px solid black;
+}
+
+#__rep_Costs_info > ul > li:last-child {
+  border-bottom: none;
+}
+
+#__rep_Costs_info .typeHeader {
+  display: flex;
+  justify-content: space-between;
+}
+
+#__rep_Costs_info .typeHeader span:first-child {
+  font-size: 16px;
+}
+
+#__rep_Costs_info li {
+  white-space: nowrap;
+  padding: 2px;
+}
+
+/* #__rep_Drives2 */
+#__rep_Drives2 {
+  display: flex;
+}
+
+#__rep_Drives2 .dataColumn rect {
+  stroke: black;
+}
+
+#__rep_Drives2_info ul {
+  margin: 0;
+  padding: 2px;
+}
+
+#__rep_Drives2_info li {
+  white-space: nowrap;
+  padding: 1px;
+}
+
+#__rep_Drives2_info span:nth-child(2) {
+  color: #14bcff;
+}
+
+#__rep_Drives2_info div span:last-child {
+  font-size: 14px;
+}
+
+#__rep_Drives2_info span:last-child {
+  font-size: 12px;
+  color: #70dc35;
+}
+
+#__rep_Drives2_info span {
+  padding-right: 3px;
+}
+
+#__rep_Drives2_info div span:first-child {
+  color: #ff8400;
+  padding-left: 3px;
 }
