--- a/css/dark.css
+++ b/css/dark.css
@@ -96,6 +96,11 @@ ul {
   border-radius: 2px;
 }
 
+#updates h2 {
+  color: #000000;
+  margin: 30px 10px;
+}
+
 #menuButton {
   font-size: 20px;
   text-align: center;
@@ -140,7 +145,7 @@ ul {
   padding: 4px;
 }
 
-#appMapBG {
+#appMap > img {
   z-index: -1;
   position: fixed;
   top: 0;
@@ -287,7 +292,7 @@ ul {
   padding-left: 4px;
 }
 
-#edit > div {
+#edit form > div {
   text-align: center;
   background-color: #24282A;
   border: 1px solid black;
