--- a/css/dark.css
+++ b/css/dark.css
@@ -617,3 +617,27 @@ input {
 #__rep_gloCountriesStay_info ul li span {
   color: #70dc35;
 }
+
+#__rep_gloCountriesStaySum svg text {
+  text-anchor: start;
+  font-size: 13px;
+}
+
+#__rep_gloCountriesStaySum svg text tspan {
+  fill: #70dc35;
+}
+
+#__rep_gloCountriesStaySum svg rect {
+  stroke: black;
+  stroke-width: 1px;
+}
+
+#__rep_gloCountriesStaySum svg .daysSum {
+  font-size: 50px;
+  text-anchor: middle;
+}
+
+#__rep_gloCountriesStaySum svg .daysSumSpread {
+  font-size: 20px;
+  text-anchor: middle;
+}
